--- a/index.html
+++ b/index.html
@@ -6,38 +6,18 @@
         <title>
             Vegan Cart
         </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
 
     <body>
-        <div class="header">
-            <nav class="navbar">
-                <input type="search" placeholder="Search for items">
-                Deliver to: <select id="city">
-                    <option>*select*</option>
-                    <option>Kolkata</option>
-                    <option>Delhi</option>
-                    <option>Mumbai</option>
-                    <option>Pune</option>
-                    <option>Chennai</option>
-                    <option>Bangalore</option>
-                    <option>Vizag</option>
-                    <option>Shillong</option>
-                    <option>Kochi</option>
-                    <option>Patna</option>
-                    <option>Guwahati</option>
-                    <option>Mysore</option>
-                    <option>Mangalore</option>
-                    <option>Srinagar</option>
-
-            </nav>
-
-            <h3>
-                Deliver to: <select id="city">
-                
-                </select> <input type="number" placeholder="pin code">
-            </h3>
-        </div>
+        <navbar>
+            <div>
+                <img src="assets/logo.png" alt="logo" class="logo">
+            </div>
+            <div>
+                <input type = ""
+            </div>
+        </navbar>
     </body>
 </html>
