--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
                 <img src="assets/logo.png" alt="logo" class="logo">
             </div>
             <div>
-                <input type = ""
+                <input type = "search">
+                <button>Search item</button>
+
+                Deliver to:
+                <select>
+                    <option>*select*</option>
+                    <option>Kolkata</option>
+                    <option>Vizag</option>
+                    <option>Bangalore</option>
+                    <option>Chennai</option>
+                </select>
+                <input type="number" placeholder="Pincode">
+
+                <a href="cart.html"><img src="assets/cart"></a>
+                <a href="login.html">Login</a>
+
             </div>
         </navbar>
     </body>
